*Empty MediaWiki Message*

--- a/Пятаев,_Емельян_Иванович.mw
+++ b/Пятаев,_Емельян_Иванович.mw
@@ -24,6 +24,7 @@
 }}
 '''Пятаевэнь Емельян''' (cёрмадей лемезэ {{Lang-myv|Эмиль Пятай}}, [[1914]] [[умарьковонь 17 чи]]  - [[1966]]) — [[Эрзянь кель|эрзянь]] кельсэ сёрмадей ды валморозей.  
 
+==Эстедензэ==
 Чачсь [[1914]] [[умарьковонь 17 чи]]стэ [[Кулясова (Камешкир буе)|Кулясова]] эрзянь<ref>[http://www.e-mordovia.ru/news/view/21475 Официальный сайт органов государственной власти РМ / 17 августа 2014 года исполняется 100 лет со дня рождения члена Союза писателей СССР (1938 г.), мордовского писателя Емельяна Ивановича Пятаева, который печатался под псевдонимом Эмиль Пятай{{ref-ru}}]</ref> велесэ неень [[Камешкир буе]]нь [[Пенза ёнкс]]со изыця-видицянь семиясо. Тетязо ульнесь стадань ваныцякс. Эмиль Пятай ледстнесь: 
 {{Цитатань ушодома}}{{Lang-myv|''«Модась ульнесь аламо, кшись весенень а сатыль. Нейке лецтян, кода обедамсто миненек максыльть а покш сускомат (мерильть «порции»). Пек стака ульнесь  [[1921 ие|1921]] — [[1922 ие]]тнестэ. Модатне ды кудонть вакссо таркась кадоволь апак виде, касыль дурак [[тикше]]сэ. Минь сонзэ пурнылинек, яжилинек ды ярсынек кши бурьянонь почтсо...»''}}
 {{oq|ru|«Земли было мало, хлеба не хватало. И сейчас помню, как за обедом нам давали только небольшие куски (так называемые «порции»). Особенно сильно страдали в 1921–1922 гг. Земля и приусадебная площадь оставались незасеянными, зарастали бурьяном. Этот бурьян убирали, обмолачивали, мололи и ели хлеб из бурьяновой муки…»}}
@@ -39,14 +40,36 @@
 
 Эмиль Пятай [[1938 ие]]стэ ульнесь примазь СССР-нь Сёрмадеень Вейсэндявксов.
 
-== Шкинеманзо ==
-* «Келей паксясо» ([[1934 ие|1934]])
-* «Маней валске» валморонь пурнавкс ([[1939 ие|1939]])
-* «Морот изнямодо» ([[1945 ие|1945]])
-* «Валдо зорят» ([[1959 ие|1959]])
-* «Сурские напевы» (рузонь кельсэ) ([[1961 ие|1961]])
-
 1963 иестэ саезь 1965 эрьва ие Саран ошсо листь «Велень эйкакшт» ({{Lang-ru|«Сельские дети»}}), «Тундонь вармат» ({{Lang-ru|«Весенний ветер»}}), «Вирьсэ» ({{Lang-ru|«В лесу»}}).
+
+==Шкинемазо==
+===Эрзянь кельсэ===
+#  «Келей паксясо» ([[1934 ие|1934]])
+#  «Маней валске» валморонь пурнавкс ([[1939 ие|1939]])
+#  «Морот изнямодо» ([[1945 ие|1945]])
+#  «Валдо зорят» ([[1959 ие|1959]])
+#  «Сурские напевы» (рузонь кельсэ) ([[1961 ие|1961]])
+# «Монь Мордовиям»: [стихть] // Родной литература: учебник-хрестоматия: эрзянь школань ветеце класснэнь. – Саранск, 1989. – С. 10–11.
+# «Сон а кирдеви ве таркасо…»: [стихть] // Сятко. – 2004. – № 8. – С. 91–93. – Содерж.: «Равонть чирев лиссь од цёра…»; Азорава; «Зярдо те кармась улеме…»; «Минь а стувтсынек те кизэнть…».
+# Лопань певерема шка: [стихть] // Чилисема. – 2006. – № 10. – С. 18.
+# «Равонть чирев лиссь од цёра…»; «Покш пандо алдо лисьма ведь…»; «Минь а стувтсынек те кизэнть…»: [стихть] // Сятко. – 2010. – № 5. – С. 84–85.
+# «Смотрит осень в сад наш через прясло…»; В гостях у друга; У берегов Уза-реки; Тополи: стихи // Поэзия мордовского края: антология / сост. К. В. Смородин; [авт. вступ. ст. М. И. Малькина; худож. А. С. Алёшкин]. – Саранск, 2012. – С. 143–145.
+#  Пятаев Емельян Иванович (Эмиль Пятай) // Брыжинский, А. И. Писатели Мордовии: биобиблиогр. указ. / А. И. Брыжинский, О. В. Пашутина, Е. И. Чернов. – Саранск, 2001. – С. 423–425.
+===Литературась эрямонзо ды шкинеманзо коряс===
+# Ломшин, М. И. Мокшэрзянь эйкакшонь литературась 1930–1941-це иетнестэ: Емельян Иванович Пятаев (1914–1967) / М. И. Ломшин // Ломшин, М. И. Мокшэрзянь эйкакшонь литературась: 5–9-це классо тонавтницятнень туртов «Родной литературань» коряс тонавтомань лездамопель / М. И. Ломшин. – Саранск, 2012. – С. 43–53.
+# Дёмин, Василий. «Паро поэт валсонзо пици…»: 1930-це иетнестэ «Сятко» журналсо поэзиясь / Василий Дёмин // Сятко. – 2011. – № 1. – С. 66–87. – (Литературась ды эрямось).
+# Емельян Пятаев // Сятко. – 2010. – № 5. – С. 84.
+# Ломшин, Михаил. Эйкакштненень алтазь Е. И. Пятаевень произведениядонзо / Михаил Ломшин // Эрзянь правда. – 2010. – 5 авг. – С. 15: портрет.
+# Сёрмадовксонзо а стувтовить зярдояк: Е. И. Пятаевень 95 иетненень // Эрзянь правда. – 2009. – 20 авг. – С. 6.
+# Эмиль Пятай (Пятаев Емельян Иванович) (1914–1967): портрет // Чилисема. – 2006. – № 10. – С. 17–18.
+# «Мы вместе с победой дошли до Берлина…»: Пятаев Емельян Иванович (Эмиль Пятай) (1914–1967) // Штыком и пером = Штыкса и пера-са = Штыксэ ды перасо: хрестоматия: в 2 ч. / авт.-сост. Т. Ф. Сафонова-Телина. – Саранск, 2005. – Ч. 2: Фронтовая летопись. – С. 241–258.
+# Васильев, Николай. Сон эри стихсэнзэ: Е. И. Пятаевень чачома чистэнзэ 90 иетненень / Николай Васильев // Эрзянь правда. – 2004. – 19 авг. – С. 7.
+# Девяткин, С. Г. Пятаев Емельян Иванович / С. Г. Девяткин // Мордовия: энциклопедия: в 2 т. / НИИ гуманитар. наук при Правительстве Респ. Мордовия; редкол.: гл. ред. А. И. Сухарев, зам. гл. ред. В. А. Юрчёнков, отв. секретарь П. П. Кузнецов. – Саранск, 2004. – Т. 2: М–Я. – С. 217–218.
+# Емельян Иванович Пятаев: чачома чистэнзэ 90 иетненень // Сятко. – 2004. – № 8. – С. 91.
+# Ломшин, Михаил. Е. И. Пятаевень «велень эйкакшонзо»: писателенть эйкакшонь произведениядонзо мельть-арсемат / Михаил Ломшин // Сятко. – 2003. – № 4. – С. 78–91
+# Девяткин, С. Пятаев Емельян Иванович / С. Девяткин // История Мордовии в лицах: биогр. сб. / НИИ яз., лит., истории и экономики при Правительстве Респ. Мордовия; сост.: П. Д. Грузнов, В. А. Чугунов; редкол.: П. Д. Грузнов (отв. ред.), В. А. Чугунов (зам. отв. ред.), И. Г. Кильдюшкина и др. – Саранск, 1997. – [Кн. 2]. – С. 419–420.
+# Брыжинский, А. И. Писатели Мордовии: биобиблиогр. указ. / А. И. Брыжинский, О. В. Пашутина, Е. И. Чернов. – Саранск, 2001. – С. 422–423. 
+
 
 == Сёрм. ==
 <references />
