*Empty MediaWiki Message*

--- a/Агейкин,_Григорий_Петрович.mw
+++ b/Агейкин,_Григорий_Петрович.mw
@@ -26,9 +26,9 @@
 '''Агейкиннэнь Григорий Петрович''' ([[1924 ие]]нь [[ацамковонь 1 чи]]стэ [[Мордовия]]нь [[Кочкурбуе]]нь [[Кочкур веле (Кочкурбуе)|Кочкур веле]]сэ) — [[Эрзя|эрзянь]] сёрмадей ды валморозей.
 
 == Эстедензэ ==
-Григорий Петрович Агейкин чачсь 1924 иень ацамковонь 1-це чистэ Кочкурова буень Кочкур велесэ. Семиясост ульнесть сисем эйкакшт: вете цёракайть ды тейтерька, покштнень марто вейсэ видсть-сокасть, андсть ракшат, лазность пенгеть. Уш школасо тонавтнемстэ Гриша варчизе валморонь сёрмадоманть, сынь печатазельть школань кулялопас. Кочкуровав сеедьстэ сакшность А.Зиньков, И.Кривошеев, Я.Григошин ды лия содавикс сёрмадыцятне. Гриша невтинзе тенст эсинзэ валморонзо. Шкань ютазь сась каршо вал И.Кривошеевень пельде, сон шнынзе Агейкинэнь сёрмадовксонзо, сынь печатазельть [[Сятко (журнал-ковставкс)|«Сятко» ковставксонть]].
+Григорий Петрович Агейкин чачсь 1924 иень ацамковонь 1-це чистэ Кочкурова буень Кочкур велесэ<ref name="Чилисема"/>. Семиясост ульнесть сисем эйкакшт: вете цёракайть ды тейтерька, покштнень марто вейсэ видсть-сокасть, андсть ракшат, лазность пенгеть. Уш школасо тонавтнемстэ Гриша варчизе валморонь сёрмадоманть, сынь печатазельть школань кулялопас. Кочкуровав сеедьстэ сакшность А.Зиньков, И.Кривошеев, Я.Григошин ды лия содавикс сёрмадыцятне. Гриша невтинзе тенст эсинзэ валморонзо. Шкань ютазь сась каршо вал [[Кривошеев, Илья Петрович|И.Кривошеевень]] пельде, сон шнынзе Агейкинэнь сёрмадовксонзо, сынь печатазельть [[Сятко (журнал-ковставкс)|«Сятко» ковставксонть]].
 
-1941 иестэ Г.П.Агейкин тусь фронтов, кудов велявтсь ансяк 1947 иестэ. Ульнесь разведчикекс, гвардеецэкс. Войнадо мейле тонавтнесь партийной школасо, мейле прядызе Н.П.Огарёв лемсэ МГУ-нь филологиянь факультетэнть. Ламо иеть важодсь «Советская Мордовия» ды [[«Эрзянь правда» (кулялопа)|«Эрзянь правда»]] кулялопатнесэ. Ульнесь «Пионерэнь вайгель» ковставксонть редакторокс, ветясь «Сэменть».
+1941 иестэ Г.П.Агейкин тусь фронтов<ref name="ИМ">[http://izvmor.ru/news/view/2482670 «Известия Мордовии»: ￼В год литературы кочкуровцы читают произведения своих земляков-писателей] {{Ref-ru}}</ref>, кудов велявтсь ансяк 1947 иестэ. Ульнесь разведчикекс, гвардеецэкс. Войнадо мейле тонавтнесь партийной школасо, мейле прядызе Н.П.Огарёв лемсэ МГУ-нь филологиянь факультетэнть. Ламо иеть важодсь «Советская Мордовия» ды [[«Эрзянь правда» (кулялопа)|«Эрзянь правда»]] кулялопатнесэ. Ульнесь «Пионерэнь вайгель» ковставксонть редакторокс, ветясь «Сэменть».
 «Эрзянь правда» газетасо важодемстэ Г.Агейкин сёрмадсь «Пингень эскелькст» статья, конасонть ёвтневи газетанть историядонзо.
 
 == Сёрмадовксонзо ==
