*Empty MediaWiki Message*

--- a/Агейкин,_Григорий_Петрович.mw
+++ b/Агейкин,_Григорий_Петрович.mw
@@ -17,7 +17,7 @@
  |мирдезэ              = 
  |низэ                 = 
  |эйкакшонзо           = 
- |казнеть ды медальть  = 
+ |казнеть ды медальть  = Орден Отечественной Войны II степени, Якстере Коцтонь
  |автограф             = 
  |вальма                = 
  |википурнавкс         = 
@@ -54,7 +54,7 @@
 * «Тундонь валске»
 
 Сон истя жо сёрмадсь балладат, фельетонт, юморескат. Г.П.Агейкин сёрмадсь [[эрзянь кель|эрзякс]], ламот произведениянзо сонсь ютавтынзе [[рузонь кель]]с. Сынь истя жо ютавтозь [[маринь кель|маринь]], [[удмуртонь кель|удмуртонь]] ды лия кельтнес.
-Агейкинтнэнь семияст срадсь весе Россиянть келес. Ялакстнэде-сазортнэде кие эри Васолонь Чилисема, кие – [[Краснодар ош]]со, кие – Мордовиясо. Григорий Петрович казезь Якстере Знамянь, Отечественной войнань 2-це степенень ордентнэсэ, боевой медальсэ. Сон – СССР-нь Журналистэнь вейсэндявксонь член.
+Агейкинтнэнь семияст срадсь весе Россиянть келес. Ялакстнэде-сазортнэде кие эри Васолонь Чилисема, кие – [[Краснодар ош]]со, кие – Мордовиясо. Григорий Петрович казезь Якстере Коцтонь, Отечественной войнань 2-це степенень ордентнэсэ, боевой медальсэ. Сон – СССР-нь Журналистэнь вейсэндявксос совиця.
 
 Г.П.Агейкин кулось [[2007 ие]]нь [[эйзюрковонь 1 чи]]стэ.
 
