*Empty MediaWiki Message*

--- a/Сятко_(журнал-ковставкс).mw
+++ b/Сятко_(журнал-ковставкс).mw
@@ -18,7 +18,7 @@
 Малав кеветее иеть журналось эзь лисне. 1956 ― 1964 ставкслопанть  лемезэ «[[Сурань толт (журнал-ковставкс)|Сурань толт]]» ульнесь.
 
 *[[Иркаев, Николай Лазаревич|Иркаев Н. Л.]] (01.1956 ― 04.1958) эли (04.1956 ― 01.1959)<ref name="Республиканская архивная служба">[http://www.sudbasoldata.ru/3409/ Республиканская архивная служба Республики Мордовия: Иркаев Николай Лазаревич (Документы) {{Ref-ru}}]]</ref>
-*[[Вечканов Серафим Емельянович|Вечканов С.Е.]] (05.1958 ― 08.1959) 
+*[[Вечканов, Серафим Емельянович|Вечканов С.Е.]] (05.1958 ― 08.1959) 
 *[[Куторкин, Андрей Дмитриевич]] (09.1958 ― 06.1959) 
 *[[Мартынов, Александр К.]] (07.1959 ― 10.1963) 
 *[[Пятаев, Емельян Иванович|Пятаев Е.И.]] (11.1963 ― 12.1966) 
