*Empty MediaWiki Message*

--- a/Эрзянь_сёрмадомась.mw
+++ b/Эрзянь_сёрмадомась.mw
@@ -4,7 +4,7 @@
 
 Тиринь эрзянь сёрмадомась ушодовсь 1882-це иестэ Казаньсэ нолдазь "Образцы мордовской народной словестнсти" кинига марто, конасонть максозель эрзянь кельсэ морот. Ие ютась, ды омбоце пелькс лиссь, конасонть эрзянь кельсэ ёвтнемат ды содамо ёвкст. Ансяк ниленькеменьшка ие ютасть, зярс сёрмась эзь педя ламонь эйс. Алкукс сёрмадомо ламонь-ламонь кармасть ютазь XX пингенть 15—20 иетнестэ.
 
-1920 иестэ [[Ульянонь ош]]со карамсь нолдавомо эрзянь кулялопа «Чинь стямо». 1921 иестэ «Якстере сокиця» Саратов ошсо. 30 иетнестэ кармась лиснеме: кулялопат «Эрзянь коммуна», «Ленинень киява» ды журналт [[Сятко (журнал-ковставкс)|«Сятко»]] ды «Пионерень Вайгель» [[Саран ош]]со; кулялопа «Вейсень эрямо» [[Лугаян ош|Лугаянсо]] Обран ёнксо.
+1920 иестэ [[Ульянонь ош]]со карамсь нолдавомо эрзянь кулялопа «Чинь стямо». 1921 иестэ «Якстере сокиця» Саратов ошсо. 30 иетнестэ кармась лиснеме: кулялопат «Эрзянь коммуна», «Ленинень киява» ды журналт [[Сятко (журнал-ковставкс)|«Сятко»]] ды «Пионерень Вайгель» [[Саран ош]]со; кулялопа «Вейсэнь эрямо» [[Лугаян ош|Лугаянсо]] Обран ёнксо.
 
 Советень шкастонть Мордовиянь Масторга эрьва буесэнть лиснильть буень кулялопат. 1931 иенть видс [[Москов ош|Московсо]] лисниль кужонь кулялопа «Якстере теште».
 
