*Empty MediaWiki Message*

--- a/Пятаев,_Емельян_Иванович.mw
+++ b/Пятаев,_Емельян_Иванович.mw
@@ -34,7 +34,7 @@
 
 Кода ледстнесь сонсь Эмиль Пятай, зярдо важодсь [[Москов]]со, вастневсь содавикс эрзянь сёрмадейтнень марто: [[Чесноков, Фёдор Маркелович|Фёдор Маркеловичень Чесноковонь]], Яковонь Пахомичень Григошинэнь, [[Моро Артур|Артуронь Матвеичень Моро]], [[Кириллов, Пётр Семёнович|Пётр Эрьке]] ды лиятнень марто. Сон ловнось ды кортниль эрьва-кодат сёрмадовкст, кармась сёрмалеме сонсь. Васенце валморонзо «Сексь» ульнесь максозь «Эрзянь коммуна» кулялопасонть [[1931 ие]]стэ [[кизэ|кизна]].
  
-[[1933 ие]]нь [[сундерьков]]сто Эмиль Пятай велявсь [[Мордовия]]в, ульнесь примазь [[«Ленинэнь киява» (кулялопа, Саран ош)»|«Ленинэнь киява» кулялопанть]] редакцияв [[Саран ош]]со. 1934 иестэ Московсо лись васенце валморонь пурнавксозо «Келей паксясо» ({{Lang-ru|«В широком поле»}}). [[1938 ие]]нь [[ацамков]]сто Эмиль Пятай ульнесь тердезь Якстере Армияв, службазо ютыль чугункань батальонсо. [[1939 ие]]стэ сонзэ лись «Маней валске» ({{Lang-ru|«Светлое утро»}}) валморонь пурнавкс. [[1941 ие]]стэ Эмиль Пятай прядызеть Горьковсо военно-политической училищанть. Ойнань васенце [[Чи (шкань вал)|читнестэ]] ульнесь фронтсо, васняяк ротань политветицякс, мейле важодсь «За Родину» кулялопанть редакциясо. Ойнанть прядомонзо мейле, 1945 иестэ, Сарансо лись «Морот изнямодо» ({{Lang-ru|«Песни победы»}}) валморонь пурнавксозо.
+[[1933 ие]]нь [[сундерьков]]сто Эмиль Пятай велявсь [[Мордовия]]в, ульнесь примазь [[«Ленинэнь киява» (кулялопа, Саран ош)»|«Ленинэнь киява» кулялопанть]] редакцияв [[Саран ош]]со. 1934 иестэ Московсо лись васенце валморонь пурнавксозо «Келей паксясо» ({{Lang-ru|«В широком поле»}}). [[1938 ие]]нь [[ацамков]]сто Эмиль Пятай ульнесь тердезь Якстере Армияв, службазо ютыль чугункань батальонсо. [[1939 ие]]стэ сонзэ лись «Маней валске» ({{Lang-ru|«Светлое утро»}}) валморонь пурнавкс. [[1941 ие]]стэ Эмиль Пятай прядызеть Горьковсо военно-политической училищанть. Ойнань васенце [[Чи (шкань вал)|читнестэ]] ульнесь фронтсо, васняяк ротань политветицякс, мейле важодсь «За Родину» кулялопанть редакциясо - ответственной секретарекс, кулялопанть редакторонть полавтыцякс<ref name="МРОКМ им. И.Д. Воронина">[http://www.mrkm.ru/news/?page=76 «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина» Поэты памяти достойны» (К 100-летию С.Е. Вечканова и Е. И. Пятаева){{ref-ru}}]</ref>. Ойнанть прядомонзо мейле, 1945 иестэ, Сарансо лись «Морот изнямодо» ({{Lang-ru|«Песни победы»}}) валморонь пурнавксозо.
 
 Ульнесь [[Сятко (журнал-ковставкс)|«Сурань толт»]] ковставксонть-журналонть прявтоксо [[1963 ие]]стэ [[1967 ие]]с.
 
