*Empty MediaWiki Message*

--- a/Вечканов,_Серафим_Емельянович.mw
+++ b/Вечканов,_Серафим_Емельянович.mw
@@ -22,7 +22,7 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Вечкановонь Серафим''' ([[1914]] [[умарьковонь 6 чи]]  - [[1966]]) — [[Эрзя|эрзянь]]<ref name="encyclop"/><ref name="МБООУ">МБООУ«Ламбаське велень средней школась». Важодемань программа предметэсь «РОДНАЯ ЛИТЕРАТУРА» 7 классо Анокстызе:  Азоркина Татьяна Павловна 2014 ие.{{ref-myv}},{{ref-ru}}</ref> сёрмадей ды валморозей. СССР-нь Сёрмадеень Вейсэндявксов совиця ([[1938 ие]]). МАССР-нь шкинемань заслуженной важодиця ([[1960 ие]]), Ине Онасо улиця. 
+'''Вечкановонь Серафим''' ([[1914]] [[умарьковонь 6 чи]]  - [[1966]]) — [[Эрзя|эрзянь]]<ref name="encyclop"/><ref name="МБООУ">МБООУ«Ламбаське велень средней школась». Важодемань программа предметэсь «РОДНАЯ ЛИТЕРАТУРА» 7 классо Анокстызе:  Азоркина Татьяна Павловна 2014 ие.{{ref-myv}},{{ref-ru}}</ref> сёрмадей ды валморозей. СССР-нь Сёрмадеень Вейсэндявксов совиця ([[1938 ие]]). МАССР-нь шкинемань заслуженной важодиця ([[1960 ие]]), Ине Ойнасо улиця. 
 
 
 ==Эстедензэ==
@@ -30,21 +30,21 @@
 
 Пряды васенце класст тиринь велесэ, [[1928 ие]]стэ туи тонавтнеме Покшаратонь сокиця-видиця одломанень школав. Мейле прядсь тонавтыцянь курсат ды важодсь ушодыця классонь тонавтыцякс [[Иваньбиё (Лугаян буе)| Иваньбиёсо]]<ref name="Национальная библиотека"/>.
 
-[[1932 ие]]стэ сон моли тонавтнеме Мордовской прявттонавтыцянь институтс, 3 курсонь прядозь тосто туи ды «Эрзянь коммуна» кулялопанть редакциясо литературань важодицякс. [[1936 ие]]стэ сонзэ саить служамо Якстере Армияв. Теде мейле 1941 иенть видс важоди редакторокс Мордовянь книжной издательствасо.
+[[1932 ие]]стэ сон моли тонавтнеме Мордовской прявттонавтыцянь институтс, 3 курсонь прядозь тосто туи ды «Эрзянь коммуна» кулялопанть редакциясо литературань важодицякс. [[1936 ие]]стэ сонзэ саить служамо Якстере Армияв. Теде мейле 1941 иенть видс важоди редакторокс Мордовиянь книжной издательствасо.
 
-Серафим Вечкановонь шкинема эскельксэнзэ ушодовсть 1930 иестэ, сестэ лугаянбуень «Вейсэнь семиясо» кулялопасо ушодовсть лисьнеме сонзэ васеньце валморонзо. 1932 иестэ саезь сон сёрмали «Эрзянь коммуна» кулялопасонть ды [[Сятко (журнал-ковставкс)|«Сятко» ковставкссо]].   
+Серафим Вечкановонь шкинема эскельксэнзэ ушодовсть 1930 иестэ, сестэ [[Лугаян буе|лугаянбуень]] «Вейсэнь семиясо» кулялопасо ушодовсть лиснеме сонзэ васенце валморонзо. 1932 иестэ саезь сон сёрмали «Эрзянь коммуна» кулялопасонть ды [[Сятко (журнал-ковставкс)|«Сятко» ковставкссо]].   
 
-Васеньце валморонь пурнавксозо ульнесь «Моронть ушотксозо»<ref name="afisha.delovoy">[https://afisha.delovoy-saransk.ru/theater/literaturnyi-vecher-v-seme-edinoi-3369.html Деловой Саранск: Литературный вечер В семье единой {{ref-ru}}]</ref> ({{Lang-ru|«Начало песни»}}), сон лись [[1933 ие]]стэ, омбоцесь — «Монь тештем» ({{Lang-ru|«Моя звезда»}}) [[1940 ие]]стэ. 
-Ине Ойнань васеньце читнестэ саезь сон иди минек масторонть фашистэнь яттнень эйстэ. Важодсь «Сталинское Знамя» бригадань кулялопанть редакторонть полавтыцякс<ref name="МРОКМ им. И.Д. Воронина">[http://www.mrkm.ru/news/?page=76 «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина» Поэты памяти достойны» (К 100-летию С.Е. Вечканова и Е. И. Пятаева){{ref-ru}}]</ref>.
+Васенце валморонь пурнавксозо ульнесь «Моронть ушотксозо»<ref name="afisha.delovoy">[https://afisha.delovoy-saransk.ru/theater/literaturnyi-vecher-v-seme-edinoi-3369.html Деловой Саранск: Литературный вечер В семье единой {{ref-ru}}]</ref> ({{Lang-ru|«Начало песни»}}), сон лись [[1933 ие]]стэ, омбоцесь — «Монь тештем» ({{Lang-ru|«Моя звезда»}}) [[1940 ие]]стэ. 
+Ине Ойнань васенце читнестэ саезь сон иди минек масторонть фашистэнь яттнэнь эйстэ. Важодсь «Сталинское Знамя» бригадань кулялопанть редакторонть полавтыцякс<ref name="МРОКМ им. И.Д. Воронина">[http://www.mrkm.ru/news/?page=76 «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина» Поэты памяти достойны» (К 100-летию С.Е. Вечканова и Е. И. Пятаева){{ref-ru}}]</ref>.
 
-1944 иестэ, середеманть коряс сонзэ нолдызь Саран ошов, важоди Мордгизсэ редакторокс ды эрзянь секциянть ветицякс<ref name="ИМ">[http://izvmor.ru/article_12772.html «Известия Мордовии» К 70-летию нападения фашистской Германии на СССР {{ref-ru}}]</ref>,  мейле «Сурань толт» ковставксонть редакторокс (1944–1959)<ref name="dereksiz"/>, МАССР-нь Сёрмадеень Вейсэндявксонть секретарекс, а 1959 иестэ 1964 иес, сон Вейсэндявксонть Прявт. 
+1944 иестэ, сэредеманть коряс сонзэ нолдызь Саран ошов, важоди Мордгизсэ редакторокс ды эрзянь секциянть ветицякс<ref name="ИМ">[http://izvmor.ru/article_12772.html «Известия Мордовии» К 70-летию нападения фашистской Германии на СССР {{ref-ru}}]</ref>,  мейле «Сурань толт» ковставксонть редакторокс (1944–1959)<ref name="dereksiz"/>, МАССР-нь Сёрмадеень Вейсэндявксонть секретарекс, а 1959 иестэ 1964 иес, сон Вейсэндявксонть Прявт. 
 
 1946 иестэ Вечкановонь лиси «Каштаз» ({{Lang-ru|«Венок»}}) пурнавксозо, ков совавтозь 16 валморот, конат ульнесть сёрмадозь Ойнань иетнестэ. Седе тов сонзэ лисить<ref name="Библиотека"/>: «Маней» ({{Lang-ru|«Солнышко»}}, [[1955]]), «Чипалы», ({{Lang-ru|«Горицвет»}}, [[1961]]), «Вечной тол» ({{Lang-ru|«Вечный огонь»}}, [[1964]]) [[эрзянь кель]]сэ, «Стихи» ([[1952]]) ды «Солнышко» ([[1960]]) [[рузонь кель]]сэ.
 
-Сонзэ сермадома лувозо лиякстоми сыця паро эрямосонть, ломанень покш виензэ ды тевензэ кемемасо, тиринь раськенть ды Масторонть эрямонзо кис ойме ёжонть марямозо. Сёрмадовикс ломантне - веси вечкить важодеме. Вечканов парсте ютавтыль рузонь кельстэ эрзяньтень, сонзэ валморонзо листь рузонь, [[ветькень кель|ветькень]], [[маринь кель|маринь]], [[эстэнь кель|эстэнь]], [[мадьяронь кель|мадьяронь]] кельтнесэ<ref name="Национальная библиотека">[http://www.library.saransk.ru/?ELEMENT_ID=872 «Национальная библиотека им. А.С. Пушкина РМ» Информационный листок «Кадык гайги седейшкавань лирикась…»: к 100-летию С. Е. Вечканова{{ref-myv}},{{ref-ru}}]</ref>.
-КПСС-нь XXII съездэнь делегат (1943)<ref name="encyclop">[http://encyclop.ru/12972 Encyclop.ru | Вечканов Серафим Емельянович {{ref-ru}}]</ref>, МАССР-нь Верховной Советэнь депутат (1960 - 1964). МАССР-нь заслуженной шкинемань важодиця, СССР-нь Сёрмадеень Вейсэндявксов (1938)
+Сонзэ сёрмадома лувозо лиякстоми сыця паро эрямосонть, ломанень покш виензэ ды тевензэ кемемасо, тиринь раськенть ды Масторонть эрямонзо кис ойме ёжонть марямозо. Сёрмадовикс ломантне - весе вечкить важодеме. Вечканов парсте ютавтыль рузонь кельстэ эрзяньтень, сонзэ валморонзо листь рузонь, [[ветькень кель|ветькень]], [[маринь кель|маринь]], [[эстэнь кель|эстэнь]], [[мадьяронь кель|мадьяронь]] кельтнесэ<ref name="Национальная библиотека">[http://www.library.saransk.ru/?ELEMENT_ID=872 «Национальная библиотека им. А.С. Пушкина РМ» Информационный листок «Кадык гайги седейшкавань лирикась…»: к 100-летию С. Е. Вечканова{{ref-myv}},{{ref-ru}}]</ref>.
+КПСС-нь XXII съездэнь делегат (1943)<ref name="encyclop">[http://encyclop.ru/12972 Encyclop.ru | Вечканов Серафим Емельянович {{ref-ru}}]</ref>, МАССР-нь Верховной Советэнь депутат (1960 - 1964). МАССР-нь заслуженной шкинемань важодиця, СССР-нь Сёрмадеень Вейсэндявксос (1938).
 
-Кулось 1965 иень ожоковонь 23 чистэ Саран ошсо, косо калмазьгак.
+Кулось 1965 иень ожоковонь 23 чистэ [[Саран ош]]со, косо калмазьгак.
 
 ==Шкинемазо==
 ===Эрзянь кельсэ===
@@ -92,7 +92,6 @@
 
 == Сёрм. ==
 <references />
-
 
 [[Category:Ломанть|В]]
 [[Category:Эрзянь сёрмадейть|В]]
