*Empty MediaWiki Message*

--- a/Вечканов,_Серафим_Емельянович.mw
+++ b/Вечканов,_Серафим_Емельянович.mw
@@ -37,7 +37,7 @@
 Васенце валморонь пурнавксозо ульнесь «Моронть ушотксозо»<ref name="afisha.delovoy">[https://afisha.delovoy-saransk.ru/theater/literaturnyi-vecher-v-seme-edinoi-3369.html Деловой Саранск: Литературный вечер В семье единой {{ref-ru}}]</ref> ({{Lang-ru|«Начало песни»}}), сон лись [[1933 ие]]стэ, омбоцесь — «Монь тештем» ({{Lang-ru|«Моя звезда»}}) [[1940 ие]]стэ. 
 Ине Ойнань васенце читнестэ саезь сон иди минек масторонть фашистэнь яттнэнь эйстэ. Важодсь «Сталинское Знамя» бригадань кулялопанть редакторонть полавтыцякс<ref name="МРОКМ им. И.Д. Воронина">[http://www.mrkm.ru/news/?page=76 «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина» Поэты памяти достойны» (К 100-летию С.Е. Вечканова и Е. И. Пятаева){{ref-ru}}]</ref>.
 
-1944 иестэ, сэредеманть коряс сонзэ нолдызь Саран ошов, важоди Мордгизсэ редакторокс ды эрзянь секциянть ветицякс<ref name="ИМ">[http://izvmor.ru/article_12772.html «Известия Мордовии» К 70-летию нападения фашистской Германии на СССР {{ref-ru}}]</ref>,  мейле «Сурань толт» ковставксонть редакторокс (1944–1959)<ref name="dereksiz"/>, МАССР-нь Сёрмадеень Вейсэндявксонть секретарекс, а 1959 иестэ 1964 иес, сон Вейсэндявксонть Прявт. 
+1944 иестэ, сэредеманть коряс сонзэ нолдызь Саран ошов, важоди Мордгизсэ редакторокс ды эрзянь секциянть ветицякс<ref name="ИМ">[http://izvmor.ru/article_12772.html «Известия Мордовии» К 70-летию нападения фашистской Германии на СССР {{ref-ru}}]</ref>,  мейле [[Сятко (журнал-ковставкс)|«Сятко»|«Сурань толт»]] ковставксонть редакторокс (1944–1959)<ref name="dereksiz"/>, МАССР-нь Сёрмадеень Вейсэндявксонть секретарекс, а 1959 иестэ 1964 иес, сон Вейсэндявксонть Прявт. 
 
 1946 иестэ Вечкановонь лиси «Каштаз» ({{Lang-ru|«Венок»}}) пурнавксозо, ков совавтозь 16 валморот, конат ульнесть сёрмадозь Ойнань иетнестэ. Седе тов сонзэ лисить<ref name="Библиотека"/>: «Маней» ({{Lang-ru|«Солнышко»}}, [[1955]]), «Чипалы», ({{Lang-ru|«Горицвет»}}, [[1961]]), «Вечной тол» ({{Lang-ru|«Вечный огонь»}}, [[1964]]) [[эрзянь кель]]сэ, «Стихи» ([[1952]]) ды «Солнышко» ([[1960]]) [[рузонь кель]]сэ.
 
