*Empty MediaWiki Message*

--- a/Сятко_(журнал-ковставкс).mw
+++ b/Сятко_(журнал-ковставкс).mw
@@ -3,6 +3,7 @@
 
 == Эрямо пингензэ == 
 Нолдави [[Самар ош|Самар ошсо]] [[1 (ловома вал)|весть]] [[ков|ковозонзо]] якшамковонь 1929 иестэ саезь. Тевсь нолдамось сокиця-видицянь коряс журнал-ставкслопа [[эрзят|эрзятненень]] ульнесь путозь [[чадыков|чадыковонь]] 5-це чистэ 1928 иестэ Вейсроссиянь промкссо партиянь важодицятнень периодической ды аволь эрзянь ды мокшонь [[Кулялопат|кулялопатнень]]. 1930 иень [[якшамков|якшамковсто]], коли ульнесь теезь-путозь Эрзямокшонь эсь азорксчи марто ёнксось, журнал-ковставксось кармась нолдавомо [[Саран ош|Сарансо]].
+СССР-нь Верховной Советэнь Призидиумось казизе «Сятко» ковставксонть-журналонть «Знак Почёта» орденсэ, [[1979 ие]]нь [[эйзюрковонь 6 чи]]стэ.
 
 == Прявтсо ломанензэ ==
 *[[Гребенцов, Д.И.]] (1929 ― 08.1931)
