*Empty MediaWiki Message*

--- a/Сярдо.mw
+++ b/Сярдо.mw
@@ -19,4 +19,10 @@
 }}
 '''Ся́рдо''' (лат. ''Alces alces'') — те идем [[Ракшат|ракша]].
 
+Лиякс, сонензэ мерить '''Вирь скал<ref name="Сятко">Сятко №2, 1935 ие. Янка Купала. Оресса леенть велькссэ. 35 лоп.{{ref-myv}}</ref>'''.
+== Сёрм.: ==
+<references />
+
+
+
 [[Категория:Ракшат|С]]
