--- a/Самар_ош.mw
+++ b/Самар_ош.mw
@@ -61,6 +61,14 @@
 }}
 '''Самар''' - покш ош Россиясо.
 
+1935 иестэ ошонть лиякс лемдизь<ref name="«Сятко2»">[https://fennougrica.kansalliskirjasto.fi/bitstream/handle/10024/74503/Syatko_1935-1_2%20-%20page%201.pdf?sequence=1 «Сятко» № 2, МОРДГИЗ Саранск 1935 ие. В. В. Куйбышев. Биографической нурька справка. 5 лоп.]{{ref-myv}}</ref>:
+{{Цитатань ушодома}}Равкуншкань Краенть ней лемезэ Куйбышевской край Самар ошось — '''Куйбышев ош'''.
+Трудицятнень мелест-решемаст топавтомань кис ВЦИК-есь тейсь постановления: Самар ошонть лемензэ теемс Куйбышев ош, Рав-Куншкань краенть— Куйбышевонь край.  {{Цитатань пе}}.
+== Сёрм.: ==
+<references />
+
+
+
 
 == Сёрм.: ==
 <references />
