*Empty MediaWiki Message*

--- a/Самара_ёнкс.mw
+++ b/Самара_ёнкс.mw
@@ -32,7 +32,7 @@ MSKS=+1|
 
 Шабрацек ашти [[Сарат ёнкс|Сарат]], [[Ульянонь ёнкс|Ульян]], [[Оренбургонь ёнкс|Оренбургонь]] ёнкснень марто, [[Печкасонь Республикась|Печкас Масторонть]] марто, истяжо ули апокшке тарка косо шабрацекс ашти [[Казахстан Мастор|Казахонь Масторось]]. 
 
-Ёнксось ульнесь теезь [[1928 ие]]нь [[панжиковонь 14 чи]]стэ кода [[Куншкаравонь ёнкс]]. 1928 иестэ лемдязь Куншкаравонь краекс, [[1935 ие]]стэ — [[Куйбышень край|Куйбышень краекс]]<ref name="«Сятко2»">[https://fennougrica.kansalliskirjasto.fi/bitstream/handle/10024/74503/Syatko_1935-1_2%20-%20page%201.pdf?sequence=1 «Сятко» № 2, МОРДГИЗ Саранск 1935 ие. В. В. Куйбышев. Биографической нурька справка. 5 лоп.]{{ref-myv}}</ref>:
+Ёнксось ульнесь теезь [[1928 ие]]нь [[панжиковонь 14 чи]]стэ кода [[Куншкаравонь ёнкс]]. 1928 иестэ лемдязь Куншкаравонь краекс, [[1935 ие]]стэ — [[Куйбышевонь край|Куйбышевонь краекс]]<ref name="«Сятко2»">[https://fennougrica.kansalliskirjasto.fi/bitstream/handle/10024/74503/Syatko_1935-1_2%20-%20page%201.pdf?sequence=1 «Сятко» № 2, МОРДГИЗ Саранск 1935 ие. В. В. Куйбышев. Биографической нурька справка. 5 лоп.]{{ref-myv}}</ref>:
 {{Цитатань ушодома}}Равкуншкань Краенть ней лемезэ Куйбышевской край Самар ошось — Куйбышев ош.
 Трудицятнень мелест-решемаст топавтомань кис ВЦИК-есь тейсь постановления: ''Самар ошонть лемензэ теемс Куйбышев ош, Рав-Куншкань краенть— '''Куйбышевонь край'''.''  {{Цитатань пе}}
 [[1936 ие]]стэ саезь [[1990 ие]]нь видс лемезе — [[Куйбышень ёнкс|Куйбышевень ёнксокс]].
