--- a/Рябов,_Владимир_Павлович.mw
+++ b/Рябов,_Владимир_Павлович.mw
@@ -24,11 +24,12 @@
 }}
 '''Владимир Павлович Рябов''' ([[1900 ие|1900]] [[чадыковонь 1 чи]], [[Ламбаське (Ицял буень)|Ламбаське веле]] — [[1938 ие|1938]] [[панжиковонь 22 чи]] [[Саранск]]ойсэ) — эрзянь тонавтыця, ламо келень содыця, омбо масторонь кельс ютавтыця. 
 == Эрямо пингезэ (Биографиязо) ==
-Рябовонь Владимир чачсь чадыковонь 1-це чисте 1900 иесте [[Ламбаське (Ицял буень)|Ламбаське велесэ]], [[Ицялонь буе|Ицялонь буесэ]]  эрзянь сокиця-видиця семияс. Сонзе лелязо ульнесь [[Рябовонь, Анатолий Павлович|Анатолий Рябовонь]]. 1927 иесте прядызеть рабфаконть Покровскоень институтонть вакссо Московссо. Седе тов [[1932 ие]]сте прядызеть Московонь веленьхозяйствань академия Тимирязевень лемсе, теде мейле тонавтсь Мордовской аграрной пединститутсо. 1933 саезь 1937 видс важодсь прявтредакторокс веленьхозяйствань литературань Мордовской кирьяпусмонь издательствасо. Сон поладыця таблицанть {{lang-ru|«Правила смешивания минеральных удобрений для внесения под различные культуры и почвы»}}. Ютавтыль рузонь кельсте эрзякс сёрмадовтомат [[А.С. Пушкин]]ень, [[М.Ю. Лермонтов]]онь, [[Н.А. Некрасов]]онь ды лиятьнень. Сонзе ютавтоманзо эйсте А.С.Пушкинэнь «Ёвкс калонь кундыцядо ды калнэде» [[1937]] иесте ( {{lang-ru|«О рыбаке и рыбке»}} ) ульнесь поладозь  [[Гамбург ош|Гамбургсо]] [[1978]] иесте эрзянь-немецень валкс.
+Рябовонь Владимир чачсь чадыковонь 1-це чисте 1900 иесте [[Ламбаське (Ицял буень)|Ламбаське велесэ]], [[Ицялонь буе|Ицялонь буесэ]]  эрзянь сокиця-видиця семияс. Сонзе лелязо ульнесь [[Рябовонь, Анатолий Павлович|Анатолий Рябовонь]]. 1927 иесте прядызеть рабфаконть Покровскоень институтонть вакссо Московссо. Седе тов [[1932 ие]]сте прядызеть Московонь веленьхозяйствань академия Тимирязевень лемсе, теде мейле тонавтсь Мордовской аграрной пединститутсо. 1933 саезь 1937 видс важодсь прявтредакторокс веленьхозяйствань литературань Мордовской кирьяпусмонь издательствасо. Сон поладыця таблицанть {{lang-ru|«Правила смешивания минеральных удобрений для внесения под различные культуры и почвы»}}. Ютавтыль рузонь кельсте эрзякс сёрмадовтомат [[Пушкин, Александр Сергеевич|А.С. Пушкин]]ень («Ёвкс калонь кундыцядо ды калнэде» ({{lang-ru|«О рыбаке и рыбке»}} [[1937]]), [[М.Ю. Лермонтов]]онь, [[Н.А. Некрасов]]онь.  Владимир Рябов ютавтызеть эрзякс малавикс [[суоми-угрань раськеть]]нень - [[Карелэть|карелэнь]] ды [[Суомить|суоминь]] [[«Калевала» морокерькс|«Калевала» морокерьксэнть]]<ref name="«Сятко2»">[https://fennougrica.kansalliskirjasto.fi/bitstream/handle/10024/74503/Syatko_1935-1_2%20-%20page%201.pdf?sequence=1 «Сятко» № 2, МОРДГИЗ Саранск 1935 ие. Калевала. Финляндиянь народонь эпос. 45 лоп.]{{ref-myv}}</ref>. Сон анокстызеть ды поладызеть  [[Гамбург ош|Гамбургсо]] [[1978]] иесте эрзянь-немецень валксонть.
 
-1937 иесте  ульнесь чумондазь ды ёртозь тюрьмас. 1938 [[панжиков]]сто ульнесь ледезь [[Саранск]]ойсе. Реабилитировазь ансяк 1956 иесте.
+1937 иесте  ульнесь чумондазь ды ёртозь тюрьмас. 1938 [[панжиков]]сто ульнесь ледезь [[Саранск]]ойсэ. Реабилитировазь ансяк [[1956 ие]]сте.
 
-
+== Сёрм.: ==
+<references />
 [[Category:Эрзянь Ине ломанть|Р]]
 [[Category:Эрзянь тонавтыцят|Р]]
 [[Category:Эрзянь ютавтыцят|Р]]
