/* «Калевала»-cь ды лия малавикс морокерькстнэ */

--- a/Калевала.mw
+++ b/Калевала.mw
@@ -12,9 +12,9 @@
 Эрьва ие, [[Даволков|даволковонь]] 28 (комськавксовоце) чистэнть, тешкстневи «Калевалань» Чи. Самай се чистэнть, 1835 иестэнть, те ине морокерьксэнь пурныцясь-теицясь, эсь прянзо ломанень икеле апак невтне, каштангалемавтомо, тешкстызе-сёрмадстызе икельцвалонть эсь ладсевксэнзэ-теевксэнзэ кавто ловноматешкссэ – '''«E.L.»'''([[Лённрот Элиас|Элиас Лённрот]]). Теде мейле кедьсэсёрмадовксонзо сон максызе типографияс. 1835-1836 иетнестэ те морокерьксэсь лиссь кавто книгасо пек вишкинька, ансяк 500 экземпляронь, тиражсо. Тень лангс апак вано Лённрот поладызе важодеманзо поэманть лангсо седе тов кемнилее иень перть. Педе пес эпосонь морокерьксэсь прядозель ды нолдазель ломанень сельме икелев 1849 иестэнть. Те шкантень сондензэ кармасть содамо Европанть келес. XX пингестэнть эйстэдензэ содавиксчись сравтовсь весе Модамасторонть ланга.
 
 == «Калевала»-cь ды лия малавикс морокерькстнэ ==
-Тедеде педе пес прядозь «Калевалантень» топоди 150 иеть. Неть иетнень перть сон ютавтозель 45 кельс. Киртязь ютавтовкст лововить малав 150. «Калеваланть» лангс ванозь ды сонзэ ёжонзо-виензэ марязь ламо лияяк раськень ломанть кармасть ловомо эйсэнзэ невтемакс раськеёжомарямонь кепедема шкатнестэ.
+Тедеде педе пес прядозь «Калевалантень» топоди 150 иеть. Неть иетнень перть сон ютавтозель 45 кельс. Киртязь ютавтовкст лововить малав 150. «Калеваланть» лангс ванозь ды сонзэ ёжонзо-виензэ марязь ламо лияяк раськень ломанть кармасть ловомо эйсэнзэ невтемакс раськеёжомарямонь кепедема шкатнестэ. Эрзякс васенцеде сняртнесь ютавтомонзо содавикс од эрзянь ютавтыця [[Рябов, Владимир Павлович|Владимир Рябов]]<ref name="«Сятко2»">[https://fennougrica.kansalliskirjasto.fi/bitstream/handle/10024/74503/Syatko_1935-1_2%20-%20page%201.pdf?sequence=1 «Сятко» № 2, МОРДГИЗ Саранск 1935 ие. Калевала. Финляндиянь народонь эпос. 45 лоп.]{{ref-myv}}</ref> [[1935]] иестэ.
 
-Лангозонзо ванозь пурнызь эсь раськень эпосост: эстэсь Ф. Крейцвальд — эстононь «Калевипоэгенть», американь цёрась Г.Лонгфелло — «Моронть Гайаватонь кувалма». «Калеваланть» оймезэ певерьдсь видметь Латышень масторонть лангскак, косо латышесь А.Пумпур пурнась латышень эпос «Лачплесис». Эрзятнененьгак ней ули мейсэ каштангалемс — [[Шарононь Сандра|А. М. Шаронов]] пурнызе ды теизе минек раськенть эпосонзо — [[«Масторава» морокерькс|«Мастораванть»]]. Улить эрзянь кельс<ref name="Н. А. Ракин">Ежегодник финно-угорских исследований. Том 10. Выпуск 2. – Ижевск: Издательский центр «Удмуртский университет», 2016. – 182 с. // Н. А. Ракин «КАЛЕВАЛА» НА КОМИ ЯЗЫКЕ ISSN 2311-0333{{ref-ru}} </ref> «Калеваланть» ютавксгак. 
+Лангозонзо ванозь пурнызь эсь раськень эпосост: эстэсь Ф. Крейцвальд — эстононь «Калевипоэгенть», американь цёрась Г.Лонгфелло — «Моронть Гайаватонь кувалма». «Калеваланть» оймезэ певерьдсь видметь Латышень масторонть лангскак, косо латышесь А.Пумпур пурнась латышень эпос «Лачплесис». Эрзятнененьгак ней ули мейсэ каштангалемс — [[Шарононь Сандра|А. М. Шаронов]] пурнызе ды теизе минек раськенть эпосонзо — [[«Масторава» морокерькс|«Мастораванть»]]. Улить эрзянь кельс<ref name="Н. А. Ракин">Ежегодник финно-угорских исследований. Том 10. Выпуск 2. – Ижевск: Издательский центр «Удмуртский университет», 2016. – 182 с. // Н. А. Ракин «КАЛЕВАЛА» НА КОМИ ЯЗЫКЕ ISSN 2311-0333{{ref-ru}} </ref> «Калеваланть» ютавксгак.
 
 == Васенце морось ==
 ''Ушодома моро, стихтне 1-102. Менельавась валги иневедень толконпряс, косо пекии варманть ды веденть пельде ды тееви Ведьавакс, с.103-176. Яксярго теи пизэ Ведьаванть кумажанзо лангс ды канды алт, с.177-212. Алтнэ кеверить пизэстэнть ды тапсевить, пелькскетнестэ тееви модась, менелесь, чипаесь, ковось, пельтне, с.213-244. Ведьавась теи ведьулот, мода нерьть-чиреть, домка ды алка таркат иневедьсэнть, с.245-280. Вяйнямёйнен чачи Ведьаванть эйстэ. Сонзэ кувать кандтнить толконтнэ. Окойники сон лотки ды лиси ведьстэнть мода лангс, с.281-344.''
