--- a/Таразбие_(Отяжбуе).mw
+++ b/Таразбие_(Отяжбуе).mw
@@ -76,7 +76,7 @@
 * Т.Д. Абрамова, Ю.Г. Мойсеев — заслуженной важодицят велень-хозяйствань [[Мордовия]]со
 * Н.Ф. Атласов —  инженер
 * А.А. Мойсеев — к. в.хоз. н.
-* [[Атласова Анна|А.Г. Атласова]]<ref name="«Сятко2»">[https://www.youtube.com/watch?v=qlgVOMBCkBs ТелеСеть Мордовии (10 канал): «Велесь течи» Таразбуесэ]{{ref-myv}}</ref>— Мордовиянь заслуженной артистка, морыця
+* [[Атласова Анна|А.Г. Атласова]]<ref name="«Велесь течи»">[https://www.youtube.com/watch?v=qlgVOMBCkBs ТелеСеть Мордовии (10 канал): «Велесь течи» Таразбуесэ]{{ref-myv}}</ref>— Мордовиянь заслуженной артистка, морыця
 * Г.П. Спиридонов — артыця
 * М.Ф. Власова — тонавтыця
 * В.М. Живаев, Т.М. Ковалёва — кулят-сёрмадейть
@@ -84,6 +84,8 @@
 * [[Прохоров, Пётр Васильевич|П.В. Прохоров]] — прозаик, Ине Отечественной ойнань улицят
 * А.М. Живаева — [[Афганистан  Мастор|Афганистансо]] ойнань улиця
 
+== Веленть эрямозо ==
+Куротне<ref name="«Велесь течи»"/>: Черепаха, Паксяпе, Алопе, Вирьпе, Нахаловка.
 == Сёрм.: ==
 <references />
 
