*Empty MediaWiki Message*

--- a/Калевала.mw
+++ b/Калевала.mw
@@ -22,7 +22,9 @@
 {| border=1
  |[[Суоминь кель|Суоминь кельсэ]]
  | 
- |[[Эрзянь кель|Эрзянь кельсэ]]
+ |[[Эрзянь кель|Эрзянь кельсэ]](ютавксось Э. Вежаень)<ref name="Эрюш Вежай">Эрюш Вежай. Эрзянь мельсэ: Ёвтнемат,  арсемат, стихть,  ютавтовкст. — Саранск: Тип. «Крас. Окт.», 2003. — 64 с. («Ратор» эрзянь од ломанень журналонть поладксозо){{ref-myv}}</ref>
+  | 
+ |[[Эрзянь кель|Эрзянь кельсэ]] (ютавксось В. Рябовонь)<ref name="«Сятко2»"/>
  |-
  |'''M'''ieleni minun tekevi,<br /> 
 aivoni ajattelevi<br /> 
@@ -43,10 +45,23 @@ kielleni kerkiävät,<br />
 Кургсом валт соласть,<br /> 
 кельбрязом пурнавсть,<br /> 
 кельстэм певерить,<br /> 
+ | 
+|Вейке снартнема сась монень, <br /> 
+Прясон шачсь вейке арсема — <br /> 
+Моравтомо улемс анок <br /> 
+Ды куроксто вал ушодомс, <br /> 
+Морамонь кис эсь вайгельсэст  <br /> 
+Кезэрь покштянь кезэрь морост. <br /> 
+Турвасон валт солазь солыть, <br /> 
+Келес чудить кортамотне,  <br /> 
+Капшить понгомо келезэнь, <br /> 
+Панжовтыть— келемтить пеем.<br /> 
  |-
  |hampahilleni hajoovat.
  |10
  |кснавокс кеверить.
+|10
+| Сырнень ялгинем—лелинем! 
  |-
  |Veli kulta, veikkoseni,<br /> 
 kaunis kasvin kumppalini!<br /> 
@@ -67,10 +82,22 @@ näillä raukoilla rajoilla,<br />
 Пуромкшнетяно чуросто,<br /> 
 чуросто прянок нетяно<br /> 
 неть кажмасторонь ёнкстнэсэ<br /> 
+ | 
+|Эйкакш чинь пек питней ялгам! <br /> 
+Эрь моратам мартот вейсэ, <br /> 
+Минь тонь марто вал евтатам. <br /> 
+Вастынек ламо шкань ютазь, <br /> 
+Кавто ендо тей молинек;<br /> 
+Чуросто эрятам вейсз,<br /> 
+Вейке вейкенень чуросто<br /> 
+Якатам а сюпав кельксканть <br /> 
+Пель ве ено мастор ланга.<br /> 
  |-
  |poloisilla Pohjan mailla. 
  |20
  |чаво Похьянь келетнесэ.
+|20
+|  Эно, максыть монень кедест, 
  |-
  |Lyökämme käsi kätehen,<br /> 
 sormet sormien lomahan,<br /> 
@@ -103,10 +130,28 @@ Pohjan peltojen periltä,<br />
 торонь прясо – Кавкомелись,<br />
 налчирькесэ – Ёвкахайнен<br /> 
 Похьянь паксятнень томбалькссэ,<br />
+ | 
+ |Суронок минь вейс путсынек, <br />
+Содазь, парт морот моратан, <br />
+Ушодтам вадря моросто, <br />
+Кадык марясызь ялганок, <br />
+Паро мельсэ кунцолосызь. <br />
+Касыця од ломань ютксо, <br />
+Касыця народонть ютксо<br />
+Мон пурнынь неть весе валтнэнь, <br />
+Неть моротнень, конань кирдильть<br />
+Каряз лангсо Вейнемейнен, <br />
+Горнасонзо Илмаринен, <br />
+Налтнень лангсо Еукахайнен <br />
+Меч лангсо Каукомиэли, <br />
+Пель ве ен васол кужова, <br />
+Калевалань човар ланга.<br />
  |-
  |Kalevalan kankahilta.
  |35
  |Калевалань вирьсэ-кальсэ.
+|35
+ |Узеренень кечкень теезь, 
  |-
  |Niit ennen isoni lauloi<br /> 
 kirvesvartta vuollessansa;<br /> 
@@ -135,10 +180,26 @@ virsihin Vipunen kuoli,<br />
 Сампось таштомсь моро марто,<br />
 куля марто сыредсь Ловхи,<br />
 озолмасо кулось Випу,<br />
+ | 
+ |Икеле тетям сынст морыль;<br />
+Пакарензэ экшсэ аштезь <br />
+Сыненст авам тонавтымем; <br />
+Сестэ киякссо эйкакшокс <br />
+Кумажаст малава чарынь; <br />
+Паморькске ульнень, ярцылень<br />
+Ловсодо ярцынь эйкакшке. <br />
+Сынь морасть монень Самподо, <br />
+Эзэлькс Лоухань валодонзо —<br />
+Кортнемамодо тень морыльть, <br />
+Моросост сэредель Сампо <br />
+Кортавтовкссто кулось Лойхи,<br />
+Вапуненгак кулось моразь, <br />
  |-
  |Lemminkäinen leikkilöihin.
  |50
  |Лемминкяйнен – киштемасо.
+ |50
+ |Налксезь кулось Лемминкяйнек 
  |-
  |Viel on muitaki sanoja,<br />
 ongelmoita oppimia:<br />
@@ -189,15 +250,39 @@ sommelon rekoseheni;<br />
 ёвтнематнень пурнынь кесакс.<br />
 Озоккес ёвкстынь киретнень,<br />
 кесактнэнь – эсь нурдынетнес;<br />
+ | 
+ |Эрьва мезть ламо мон содан, <br />
+Лият валт ламо монь улить, <br />
+Конань сезнинь мон ян лангсо, <br />
+Конань синтринь вереск лангсто, <br />
+Конатнень синдинь тарадсто, <br />
+Мезть тарадсто эстень пурнынь,<br />
+Конань кочксинь тикше лангсто. <br />
+Стада ваныкс сестэ ульнинь, <br />
+Стада ваныця цёрынькакс, <br />
+Молелинь ванома таркас, <br />
+Косо тикшень ламо медест,<br />
+Косо пандынетне сырнень: <br />
+Раужо Мурикки мельга, <br />
+Сермав Киммо мельга ютынь.<br />
+Якшакось морот тень евтнесь, <br /> 
+Кандтлесь морот тень пиземесь, <br />
+Пувсесь ине ведь вельвкстнэ.<br />
+Мон сынст тапаринь ве кирькс,<br /> 
+Путыя мон нурдос сюлмонть,<br />
+Нурдынес путыя киренть, <br />
+Кудов ускинь нурдынесэ,<br />
+Ауняс нурдсо уския,<br />
  |-
  |vein kelkalla kotihin,
  |75
  |ускинь нурдсо эсь кудозом,
+ |75
+ |Утомо вельтямо алов.
  |-
  |rekosella riihen luoksi;<br />
 panin aitan parven päähän<br />
 vaskisehen vakkasehen.<br /><br />
-
 Viikon on virteni vilussa, <br />
 kauan kaihossa sijaisnut.<br />
 Veänkö vilusta virret,<br />
@@ -225,10 +310,25 @@ kerittelen pään kerältä,<br />
 Эли панжомс валонь паргонть,<br />
 Ёвтнематнень тосто таргамс?<br />
 Тапаркс-киресь калавтома,<br />
+ | 
+ |Пижень паргосо сынст кекшинь. <br /><br /><br /><br />
+Якшамосонть морот кувать,<br />
+Путозь-кекшезь кувать аштесть <br />
+Саемс а саемс моротнень?<br />
+Саемс арась якшамосто?<br />
+Кандомс а кандомс тень паргонть,<br />
+Аравтомс арась эзем пряс,<br />
+Паро-ен вельтямо алов, <br />
+Мазый-паро лато алов?<br />
+Панжомс-арась моро паргонть, <br />
+Валсо велькска пештязь паргонть? <br />
+Саемс арась киренть педеде? <br />
  |-
  |suorin solmun sommelolta?
  |90
  |Кесак сюлмотне нолдтнемат?
+ |90
+ |Юксемс арась кеме сюлмонть?
  |-
  |Niin laulan hyvänki virren, <br />
 kaunihinki kalkuttelen<br />                                                              
@@ -249,15 +349,28 @@ tämän iltamme iloksi,<br />
 коське-пись кургсояк моран,<br />
 вачонь пекесэяк ёвтнян,<br />
 те чокшненть туртов ды кенярксокс,<br />
+ | 
+ |Мон моран пек вадря моро, <br />
+Кандыньдеряйть монень кия <br />
+Раськше максыльдеряйть монень <br />
+Морамозо токи пилес.<br />
+А улиньдеряй тень пиясь, <br />
+Ансяк пидезь а кандыть тень, <br />
+Коське кургсо мон а моран <br />
+Эли моран ведьте симезь — <br />
+Чокшнень мазыензэ кисэ,<br />
+Улезэ чись мазылгавтозь, <br />
+Валскень минь охотнасо<br />
  |-
  |päivän kuulun kunniaksi,
  |100
  |юты чинть туртов ды содавиксчис,
+ |100
+ |Вандый чизэ ушодоволь.
  |-
  |}
 
 == Сёрм.: ==
-* Эрюш Вежай. Эрзянь мельсэ: Ёвтнемат,  арсемат, стихть,  ютавтовкст. — Саранск: Тип. «Крас. Окт.», 2003. — 64 с. («Ратор» эрзянь од ломанень журналонть поладксозо)
 
 [[Категория:Мифология]]
 [[Категория:Суоми-угрань сёрмадоматев|К]]
