*Empty MediaWiki Message*

--- a/Рябов,_Владимир_Павлович.mw
+++ b/Рябов,_Владимир_Павлович.mw
@@ -2,9 +2,9 @@
  |лем                  = Владимир Рябов 
  |оригинальной лем      = 
  |чачома лем         = Владимир Павлович Рябов  
- |артовкс              = 
+ |артовкс              = Ryabov VA.jpg
  |артовксонть покшолмазо   = 
- |артовксонть эйсте = 
+ |артовксонть эйсте = Владимир Рябов 1920-це иетнестэ
  |важодема ёрокчизе     = [[эрзя]]нь тонавтыця, ламо келень содыця, омбо масторонь кельс ютавтыця
  |чачома чись          = 1.04.1900
  |чачома тарка         = {{ЧачомаТарка|Ламбаське веле||Ламбаське (Ицял буень)}}, {{ЧачомаТарка|Ицялонь буе}}, {{ЧачомаТарка|Мордовия Республикась|Мордовиянь}}
