--- a/Рябовонь,_Анатолий_Павлович.mw
+++ b/Рябовонь,_Анатолий_Павлович.mw
@@ -30,7 +30,7 @@
 
 == Тонавтнемазо ==
 Тетянзо куломадо мейле кадсы семинариясо тонавтнеманть, ансяк, сёксня 1912-це иестэ пек парсте максы экзамент Нежинской педагогической институтонь келень тонавтнема(филологической) факультетс, конань пек парсте прядсы [[1916 ие|1916]]-це иестэ. Тонавтнемстэ сон кармась содамост [[Латинэнь кель|латинэнь]], [[Англань кель|англань]], [[Суоминь кель|финнэнь]] ды [[Эстэнь кель|эстониянь]] кельтнень.
-
+[[File:Ryabiv AP and StErzia.jpg|thumb|left|300px|Рябовонь Анатолий ды [[Степан Эрьзя]]]]
 [[4 (ниле)|4]] [[Ие|иеть]] А. П. Рябов важодсь тонавтыцякс семинариясо, мейле — [[Алоошонь ёнкс|Нижегородской]] губерниясо раськень образованиянь отделсэ сотрудникекс. Тесэ сон бажи теемс школасо тонавтнеманть [[Эрзянь кель|эрзянь]] ды [[Мокшонь кель|мокшань]] кельтнесэ. Активной профессиональной важодемазо эрзятненень ды мокшотненень раськень школа панжома коряс неизь РСФСР-энь Наркомпросонь прогрессивной сотрдниктне, секскак [[1924 ие|1924]]-це иестэ сонзэ тердить Московов важодеме методистэкс Совнацменэнь Центральной Мордовиянь бюров.
 [[Москов ош|Московсо]] свал ульнесь покш мокшонь ды эрзянь томбале эрицятнеде. Тесэ мокшотне ды эрзятне муильть кекшема тарка вачочиденть, революциядо мейле кундсематнеде, свал весе кортасть эсь ютковаст тиринь кельсэ.
 
