--- a/Степан_Эрьзя.mw
+++ b/Степан_Эрьзя.mw
@@ -32,7 +32,7 @@
 [[1902 ие]]стэ саезь 1906 иес тонавтнесь МУЖВЗ-со (Московонь живописень, ваяниянь ды зодчествань училищасо) Волнухинень С. М. ды Трубецкоень П. П. содавикс тонавтыцятнень кедьсе.
 
 [[1906 ие]]сте саезь 1914 иес чувтосто керсицясь эрясь [[Италия Мастор|Италиянь]] ды [[Франция Мастор|Франциянь]] Мастортнева.
-
+[[File:Ryabiv AP and StErzia.jpg|thumb|left|350px|[[Рябовонь, Анатолий Павлович|Рябовонь Анатолий]] ды Степан Эрьзя, (1920-це иетнень ушодовмсто)]]
 [[1920 ие]]стэ саезь 1926 иес эрясь Кавказонь ёнксо ды лия [[СССР|СССР-нь]] лембе ёнкснева. 1926 иесте Степан Эрьзя ардсь Франциянь Масторов (Париж ошов) эсинзе невтевкс марто, сесте сонзе ушодовсь кувака омбомасторонь эрямо ды шкинема шказо. 
 
 [[1927 ие]]стэ саезь 1950 иес Инекерсицясь важоди ды эри [[Аргентинань Мастор|Аргентинань Масторсо]] ([[Буэнос-Айрес ош|Буэнос-Айресес ошов]]). 
