--- a/Ламбаське_(Ицял_буе).mw
+++ b/Ламбаське_(Ицял_буе).mw
@@ -59,10 +59,27 @@
  |сайт                    = http://www.лобаски.рф
  |язык сайта              = 
 }}
-'''Ламбаське велесь''' ({{lang-ru|Лобаски}}) — эрзянь веле [[Ицял буе|Ицял буесэ]]. 
+'''Ламбаське велесь''' ({{lang-ru|Лобаски}}) — эрзянь<ref name="«Республика молодая»"/> веле [[Ицял буе|Ицял буесэ]]. 
 
+==Веленть лемденть==
 «Ловнозь-сёрмадстозь эрямо таркатнень Обранонь ёнксонь»-сонть (1893) Ламбаське (Лобаски) — казенной веле 331 кардазт [[Лукояновань|Лукояновань]] уезденть-буенть. «Арзамассонь таркавань актнесэ» эрямо таркатнень те лемсэ ледстневи [[1596 ие]]стэ. Те Сыре Ламбаське. Сынь ульнесть верьцесэ [[Ежат лей|Ежат леенть]]. [[1677 ие]]де мейле сёрмадстома-кевкснематнесэ Сыре Ламбаське а вастовить.  «Арзамассонь мордвась» кинигасонть [[А. А. Гераклитов|А. А. Гераклитов]] сёрмады, келя эрицятне Сыре Ламбаськень 1677 иеде мейле вейсэ Солдоманова ды Пеля велетнень эрицятнень марто  озасть эрямо чаво паксяс. Истя лиссь Ламбаське [[Мутулка лейне|Мутулка лейнесенть]]. Од таркасонтькак эрицятне ванстызь сыре лемензэ веленть, юронзо конань алкуксонь, кезерень эрзя Ламбаське лемстэнть, кона пек сеедьстэ  ванстови [[XVI—XVIII пингтнень|XVI—XVIII пингтнень]] актовой сёрмадовкстнэсэ.
 
+==Содавикс ломанть те велестэнть==
+Ламбаське велесэ чачсть:
+* [[Адушкин, Виктор Алексеевич|Виктор Адушкин]]<ref name="«Республика молодая»"/> — юстициянь генерал-лейтенант 
+*[[Галаев, Петр Васильевич|Петр Галаев]]<ref name="МООБУ «Лобасковская">[http://lobaski.edurm.ru/p13aa1.html МООБУ «Лобасковская основная общеобразовательная школа» Ичалковского муниципального района Республики Мордовия:Общие сведения об образовательном учреждении]{{ref-ru}}</ref>— кирдивийсэ важодсь
+* [[Горбунов, Василий Владимирович|Василий Горбунов]]<ref name="«Республика молодая»"/> — филологиянь наукань доктор, профессор,
+* [[Прончатов, Иван Николаевич|Иван Прончатов]]<ref name="«Республика молодая»"/><ref name="Библиотека">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=9 Библиотека Мордовской Литературы:Прончатов Иван Николаевич]{{ref-ru}}</ref>— эрзянь валморозей.
+* [[Рябовонь, Анатолий Павлович|Анатолий Рябов]]<ref name="«Республика молодая»">[http://rm.saransk.ru/?id_refer=3034 газета «Республика молодая» село Лобаски, Ичалковский район]{{ref-ru}}</ref><ref name="philol">[http://www.philol.msu.ru/~smu/work/science-day/2011/30.pdf Данильчев Александр Алексеевич «Эрзянско-русский словарик» и «Русско-эрзянский словарь» А. П. Рябова.]{{ref-ru}}</ref> — эрзянь профессор, ламо келень содыця, васенце Эрзянь букварень пурныця-нолдыця. 
+* [[Рябов, Владимир Павлович|Владимир Рябов]]<ref name="«ПОБЕДА»">[http://pobeda-rom.ucoz.ru/news/da_obretut_pokoj_stradavshie_telesno/2013-08-16-175 Газета «ПОБЕДА» Да обретут покой страдавшие телесно]{{ref-ru}}</ref> — эрзянь тонавтыця, ламо келень содыця, омбо масторонь кельс ютавтыця.
+* [[Шумилкин, Ивана Егоровича|Иван Шумилкин]]<ref name="«Республика молодая»"/> — эрзянь валморозей, баснянь ладиця.
+*[[Чичеватов, Николай Максимович|Николай Чичеватов]]<ref name="«Республика молодая»"/> — генерал-майор.
+*[[Фильченков, Андрей Егорович|Андрей Фильченков]]<ref name="«Республика молодая»"/><ref name="Кулят инфо">[http://kulyat.info/news/view/2908-ne-prervetsya-svyaz-pokolenij.html Кулят инфо: Не прервется связь поколений]{{ref-ru}}</ref> — генерал-лейтенант.
+*[[Юрченков, Петр Михайлович|Петр Юрченков]]<ref name="МООБУ «Лобасковская"/> — кирдивийсэ важодсь
+* [[Яушев, Илларион Максимович|Илларион Яушев]]<ref name="«Республика молодая»"/> — оперань морыця.
+
+== Сёрм.: ==
+<references />
 
 [[Category:Мордовиянь велеть|Л]]
 [[Category:Ицял буень велеть|Л]]
